# CreativeLM

./: .gitignore  COMMANDS.md  README.md  SFT_BRIDGE_CHECKLIST.md  commands_macgyver.md  pyproject.toml  run.py
creativelm/: __init__.py  model_loader.py
dataset/: abcd_aiden.json  abcd_aiden_150.json  abcd_aiden_150_fixed.json  abcd_aut.json  abcd_aut_multiple_b.json  abcd_ps.json  abcd_tuples.json  d_banal.json
dlp/: __init__.py
dlp/data/: __init__.py  abcd.py  macgyver.py
dlp/evaluation/: __init__.py  api.py  benchmark.py  generate.py  judge.py  methods.py  pipeline.py  prompts.py
dlp/evaluation/data/: example_aut_outputs.json  objects.json
dlp/models/: __init__.py  base.py  hf_loader.py  openai_loader.py
dlp/novelty/: __init__.py  corpus_index.py  originality.py
dlp/steering/: __init__.py  completion_sources.py  extractors.py  hooks.py  vectors.py
dlp/training/: __init__.py  data_prep.py  sft.py
dlp/utils/: __init__.py  config.py
docs/: APPENDIX_STEERING_EXPERIMENTS.md  BRIDGE_STEERING_EXPERIMENT.md  STEERING_LAYER_SELECTION.md
notebooks/: bridge_steering.ipynb  direct_prompting.ipynb  eval_bridge_internalization.ipynb  sft_bridge_internalization.ipynb
scripts/: __init__.py  analyze_judge_scores.py  analyze_oscai_results.py  build_ngram_index.py  compute_macgyver_novelty_table.py  compute_originality.py  compute_response_diversity.py  holistic_experiment_comparison.py  inspect_steering_layers.py  qualitative_alpha_sweep.py  run_aut_benchmark.py  run_aut_inference.py  run_brainstorm_select.py  run_bridge_steering.py  run_inference.py  run_judge.py  run_macgyver_inference.py  run_vllm_judge.py  score_macgyver_quality.py  select_best_uses.py  vllm_request_progress.py
