[project]
name = "dlp"
version = "0.1.0"
description = "DLP research package: models, steering, training, evaluation."
requires-python = ">=3.9"
dependencies = [
	"lightning",
	"openai>=1.0.0",
	# Keep transformers 4.x: vLLM 0.11 expects tokenizer.all_special_tokens_extended (removed in 5.x)
	"transformers>=4.40.0,<5",
	"torch>=2.2.0",
	"accelerate>=0.20.0",
	"ipykernel",
	"ipywidgets",
	"hf-transfer>=0.1.0",
	"bitsandbytes>=0.41.0",
	"pandas>=2.0.0",
	"jsonlines>=3.0.0",
	# CreativityPrism/main
	"numpy>=1.24.0",
	"pyyaml>=6.0",
	"tqdm>=4.65.0",
	"anthropic>=0.18.0",
	"google-generativeai>=0.3.0",
	"google-genai>=1.0.0",
	"nltk>=3.8.1",
	"scikit-learn>=1.3.0",
	"scipy>=1.11.0",
	"sentencepiece>=0.1.99",
	"tokenizers>=0.15.0",
	"python-dotenv>=1.0.0",
	"requests>=2.31.0",
	"tenacity",
	"tiktoken",
	"together",
	"reka-api>=2.0.0",
	"zhipuai",
	"ai21>=2.13.0",
	"azure-identity",
	"azure-ai-inference",
	"cohere",
	"mistralai",
	"pillow",
	# CreativityPrism/cs4
	"matplotlib>=3.7.0",
	"seaborn>=0.13.0",
	"openpyxl>=3.0.0",
	# CreativityPrism/ttct, neocoder_dat, aut_ttcw_cshort
	"vllm>=0.5.0",
	"huggingface-hub>=0.26.0",
	"protobuf>=5.29.0",
	# CreativityPrism/neocoder_dat
	"backoff>=2.2.0",
	"boto3>=1.34.0",
	"click>=8.0.0",
	"datasets>=3.0.0",
	"evaluate",
	"deepspeed>=0.12.0",
	"einops",
	"peft>=0.10.0",
	"trl",
	"overrides>=7.4.0",
	# CreativityPrism/main + aut_ttcw_cshort evaluators (story_metrics, etc.)
	"spacy>=3.7.0",
	"en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
	"spacy_syllables>=3.0.0",
	"sentence-transformers>=2.0.0",
	"benepar>=0.2.0",
	# Optional: math_n_index (unidecode, sacremoses), neocoder_dat (gensim, beautifulsoup4, zenrows)
	"unidecode>=1.3.0",
	"sacremoses>=0.1.0",
	"gensim>=4.0.0",
	"beautifulsoup4>=4.12.0",
	"zenrows>=1.0.0",
	"black",
	"pip>=26.0.1",
	"wandb",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dlp", "dlp.*"]

# Move the dependencies array under the [tool.uv] section
[tool.uv]
# Add any uv-specific configuration here if needed
